sumo/tests/sumo/output/e2/errors/id_empty/detector.sumo
<?xml version="1.0"?>

<!-- generated on 11/19/07 13:22:09 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>1000</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<detector>
</detector>
